--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
       "next-themes": "^0.2.1",
       "react": "18.2.0",
       "react-apexcharts": "^1.4.0",
-      "react-dom": "18.2.0"
+      "react-dom": "18.2.0",
+      "sqlite": "^5.1.1",
+      "sqlite3": "^5.1.7"
    },
    "devDependencies": {
       "@types/node": "18.7.18",
