--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
    },
    "dependencies": {
       "@nextui-org/react": "^1.0.0-beta.10",
+      "@types/bcrypt": "^5.0.2",
+      "@types/jsonwebtoken": "^9.0.5",
       "apexcharts": "^3.35.5",
+      "bcrypt": "^5.1.1",
+      "jsonwebtoken": "^9.0.2",
       "mysql2": "^3.9.0",
       "next": "12.3.0",
       "next-themes": "^0.2.1",
